--- a/admissions/courses.html
+++ b/admissions/courses.html
@@ -11,12 +11,12 @@
   <!-- Header -->
   <header class="header">
     <div class="left-section">
-      <img src="logo.png" alt="College Logo" class="logo">
+      <img src="../Images/logo.png" alt="College Logo" class="logo">
       <div class="college-name">New English School & Junior College, Sadashivnagar Hamidwada</div>
     </div>
     <div class="right-section">
       <div class="grade">UDISE No. : 27340805503</div>
-      <div class="school-code">School Index No. : J23.07.017</div><div class="college-code">College HSC Index No. : 23.07.052</div>
+      <div class="school-code">School Index No. : 23.07.052</div><div class="college-code">College HSC Index No. : J23.07.017</div>
     </div>
   </header>
   <body>
@@ -39,7 +39,7 @@
           <li><a href="courses.html">Courses Offered</a></li>
           <li><a href="eligibility.html">Eligibility Criteria</a></li>
           <li><a href="documents.html">Documents Required</a></li>
-          <li><a href="../contact/contact.html">Contact for Admission</a></li>
+          <li><a href="contact-for-admissions.html">Contact for Admission</a></li>
         </ul>
       </li>
       <li class="dropdown">
@@ -82,8 +82,7 @@
       <h4>Subjects Offered:</h4>
       <ul>
         <li>English (Compulsory)</li>
-        <li>Marathi/Hindi (Second Language)</li>
-        <li>History</li>
+        <li>Marathi</li>
         <li>Geography</li>
         <li>Political Science</li>
         <li>Sociology</li>
@@ -108,10 +107,11 @@
       <h4>Subjects Offered:</h4>
       <ul>
         <li>English (Compulsory)</li>
-        <li>Marathi/Hindi (Second Language)</li>
+        <li>Marathi</li>
+        <li>Geography</li>
         <li>Physics</li>
         <li>Chemistry</li>
-        <li>Biology / Mathematics / IT (as per choice)</li>
+        <li>Biology / Mathematics (as per choice)</li>
         <li>Environmental Education</li>
         <li>Health & Physical Education</li>
       </ul>
@@ -136,7 +136,7 @@
       </div>
       <div class="footer-block">
         <h3>Call Us</h3>
-        <p>+919421109060</p>
+        <p>+919503367572</p>
       </div>
       <div class="footer-block">
         <h3>Email Us</h3>
