--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,12 +11,12 @@
   <!-- Header -->
   <header class="header">
     <div class="left-section">
-      <img src="logo.png" alt="College Logo" class="logo">
+      <img src="../Images/logo.png" alt="College Logo" class="logo">
       <div class="college-name">New English School & Junior College, Sadashivnagar Hamidwada</div>
     </div>
     <div class="right-section">
       <div class="grade">UDISE No. : 27340805503</div>
-      <div class="school-code">School Index No. : J23.07.017</div><div class="college-code">College HSC Index No. : 23.07.052</div>
+      <div class="school-code">School Index No. : 23.07.052</div><div class="college-code">College HSC Index No. : J23.07.017</div>
     </div>
   </header>
   <body>
@@ -39,7 +39,7 @@
           <li><a href="../admissions/courses.html">Courses Offered</a></li>
           <li><a href="../admissions/eligibility.html">Eligibility Criteria</a></li>
           <li><a href="../admissions/documents.html">Documents Required</a></li>
-          <li><a href="contact.html">Contact for Admission</a></li>
+          <li><a href="../admissions/contact-for-admissions.html">Contact for Admission</a></li>
         </ul>
       </li>
       <li class="dropdown">
@@ -77,7 +77,7 @@
     </div>
     <div class="contact-block">
       <h3>Phone Number</h3>
-      <p>+919421109060</p>
+      <p>+919503367572</p>
     </div>
     <div class="contact-block">
       <h3>Email</h3>
@@ -102,7 +102,7 @@
       </div>
       <div class="footer-block">
         <h3>Call Us</h3>
-        <p>+919421109060</p>
+        <p>+919503367572</p>
       </div>
       <div class="footer-block">
         <h3>Email Us</h3>
